Feat: 新增 kkoj 代码沙箱模块

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "kkoj-ui"]
 	path = kkoj-ui
 	url = git@github.com:Lhk1008611/kkoj-ui.git
+[submodule "kkoj-code-sandbox"]
+	path = kkoj-code-sandbox
+	url = https://github.com/Lhk1008611/kkoj-code-sandbox
